# aegistwin

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  github_skills_profile.md  pyproject.toml
Omni_Projects/: compile_research.py
backend/: __init__.py  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_audit_immutability.py
backend/app/: main.py
backend/app/agents/defensive/: agent.py
backend/app/agents/offensive/: agent.py
backend/app/api/: router.py
backend/app/api/endpoints/: assets.py  attack_paths.py  audit.py  auth.py  clusters.py  deception.py  detections.py  engagements.py  findings.py  missions.py  remediation.py  reports.py  telemetry.py  tenants.py
backend/app/core/: config.py  deps.py  policy.py  security.py
backend/app/db/: models.py  session.py
backend/app/deception/: fabric.py
backend/app/detections/: agent.py
backend/app/remediation/: agent.py
backend/app/risk/: engine.py
backend/app/schemas/: schemas.py
backend/app/seed/: __init__.py  demo_seed.py
backend/app/tool_broker/: attack_graph.py  broker.py  dynamic_fuzzer.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_core.py
docs/: architecture.md  safety_model.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  mockData.ts
frontend/src/pages/: ActorFingerprints.tsx  AttackPathGraph.tsx  Dashboard.tsx  DeceptionEvents.tsx  DefensiveHunter.tsx  DetectionDrafts.tsx  DigitalTwin.tsx  EvidenceVault.tsx  Findings.tsx  OffensiveMissions.tsx  RemediationQueue.tsx
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init.sql  nginx.conf
