[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegistwin-backend"
version = "0.1.0"
description = "AegisTwin dual-agent cybersecurity platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "openai>=1.0.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-jose",
    "faker>=25.0.0",
]

# ── Explicit package discovery so setuptools does not pick up infra/frontend ──
[tool.setuptools.packages.find]
where   = ["backend"]
include = ["app*"]

[tool.ruff]
line-length    = 100
target-version = "py311"
select  = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore  = ["ANN101", "ANN102", "S101", "S105", "S106", "S107"]
exclude = ["alembic/", ".venv/"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true
exclude             = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["backend/tests"]
python_files   = ["test_*.py"]
python_functions = ["test_*"]
pythonpath     = ["backend"]
addopts        = "-v --tb=short"
